# mobile-robot-ros

./: .gitignore  Readme.md
src/cameraOpenCv/: CMakeLists.txt  package.xml
src/mobile_robot2/: LICENSE  package.xml  setup.cfg  setup.py
src/mobile_robot2/config/: lift_motor_config.yml  rotate_motor_config.yml
src/mobile_robot2/mobile_robot/: debug.py  shandong_trials_module.py
src/mobile_robot2/mobile_robot/function/: InitOdomFunction.py  LidarFunction.py
src/mobile_robot2/mobile_robot/model/: ArmMovement.py
src/mobile_robot2/mobile_robot/ros_client/: TopicSubscriber.py
src/mobile_robot2/mobile_robot/task/: ShandongTrialsTask.py
src/mobile_robot2/mobile_robot/util/: Onnx.py  Util.py
src/mobile_robot2/mobile_robot2/: shandong_trials_module.py
src/mobile_robot2/mobile_robot2/function/: CorrectiveFunction.py  InitOdomFunction.py  LidarFunction.py  TakeImageFunction.py
src/mobile_robot2/mobile_robot2/model/: Corrective.py  CorrectivePoint.py  Direction.py  MnnCmd.py  MotionMode.py  MotorMovement.py  NavigationPoint.py  Rectangle.py  ResetOdomMode.py  Servo.py  ServoMotor.py
src/mobile_robot2/mobile_robot2/ros_client/: LidarSubscriber.py  LiftMotorService.py  MotionService.py  NavigationAction.py  NavigationActionClient.py  OdomService.py  RobotCtrlPublisher.py  RobotDataSubscriber.py  RotateMotorService.py  SensorService.py  ServiceClient.py  TakeImageService.py  TopicPublisher.py
src/mobile_robot2/mobile_robot2/service/: NavigationService.py
src/mobile_robot2/mobile_robot2/task/: ShandongTrialsTask.py
src/mobile_robot2/mobile_robot2/util/: Config.py  Math.py  (+1 more)
src/mobile_robot2/param/: provincial_races_navigation_point.yml
src/mobile_robot2/weights/: best-sim.onnx
tools/: 授权激活.py  (+2 more)
(+291 files in other folders)
