<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_robot2</name>
  <version>2.0.0</version>
  <description>这是移动机器人节点</description>
  <maintainer email="3425316708@qq.com">starchen</maintainer>
  <license>Apache-2.0</license>

  <depend>robot_interfaces</depend>
  <depend>vision_interfaces</depend>

  <exec_depend>rclpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
